# jabcode

./: .gitignore  BUILD_STRATEGY.md  COLOR_MODE_AUDIT.md  DIAGNOSTICS_TO_REMOVE.md  JABCode_Color_Modes_Comparison.html  JABCode_Color_Modes_README.md  JABCode_Color_Modes_Test_README.md  SOLUTION_SUMMARY.md  build.sh  complete_getOptimalECC.c  comprehensive-build.sh  download_junit.sh  fix-jni-symbols.sh  phase1_baseline_results.txt  phase1_corrected_median_results.txt  phase1_with_median_results.txt  phase2_adaptive_all_safety.txt  phase2_adaptive_allbugs_fixed.txt  phase2_adaptive_cleanup_fix.txt  phase2_adaptive_final.txt  phase2_adaptive_final_working.txt  phase2_adaptive_fixed.txt  phase2_adaptive_forced_cleanup.txt  phase2_adaptive_heap_fix.txt  phase2_adaptive_results.txt  phase2_adaptive_working.txt  phase2_cleanup_hook_test.txt  phase2_iterative_v1_results.txt  phase2_lab_results.txt  rebuild-jni-simple.sh  rebuild-jni.sh
.benchmarks/: README.md  baseline.json
.github/workflows/: benchmark.yml
docs/: README_JABCode_Color_Modes.md  comparison.html
javacpp-wrapper/: LICENSE  NOTICE  README.md  dependency-reduced-pom.xml  pom.xml  test_jabcode.c  unused-dependencies.xml
memory-bank/: integration-approaches-comparison.md  platform-feature-matrix.md
output/: README.md  decoded_2_colors.txt  decoded_4_colors.txt  decoded_8_colors.txt  sample_text.txt
panama-refactor/: CHECKLIST.md  INDEX.md  OVERVIEW.md  README.md
panama-wrapper/: .gitignore  FINAL_STATUS_REPORT.md  FULL_COLOR_MODE_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_TEST_STATUS.md  JEXTRACT_SETUP.md  NEXT_STEPS.md  PHASE7_COMPLETE.md  PHASE8_COMPLETE.md  PHASE8_PROGRESS.md  PHASE9_COMPLETE.md  QUICKSTART.md  README.md  TEST_COVERAGE_REPORT.md  TEST_FRAMEWORK_STATUS.md  benchmark-baseline.md  jextract.sh  pom.xml  profile-decode.sh  run-benchmark.sh  run-integration-tests.sh  run-phase2-benchmarks.sh  run-phase3-benchmarks.sh
panama-wrapper-itest/: BASELINE_TEST_RESULTS.md  CRITICAL_FINDING.md  DECODER_ANALYSIS.md  INVESTIGATION_FINDINGS.md  SOLUTION_FOUND.md  check-and-fix.sh  color-mode-test-results.txt  pom.xml  run-tests.sh  test-color-modes.sh
scripts/: build.sh  comprehensive-build.sh  fix-jni-symbols.sh  fix-library-links.sh  generate_jabcodes.sh  organize.sh  test-fixed-build.sh  test_color_modes.sh
swift-java-wrapper/: CMakeLists.txt  CMakeLists_test_comprehensive.txt  PHASE1-BLOCKER.md
swift-java-wrapper/include/: mobile_bridge.h
swift-java-wrapper/src/c/: mobile_bridge.c  mobile_utils.c
swift-java-wrapper/test/c/: test_bitmap_debug.c  test_camera_decode.c  test_color_modes.c  test_comprehensive.c  test_decode.c  test_desktop_decode.c  test_desktop_encoder.c  test_encode.c  test_encode_roundtrip.c  test_mobile_bridge.c  test_palette_debug.c  test_png_roundtrip.c  test_png_roundtrip_simple.c  test_synthetic_decode.c  test_various_configs.c
swift-java-wrapper/test/c/unity/: unity.c  unity.h
test/: decoded_8_colors.txt  sample_text.txt  test_jabcode  test_jabcode.c  test_jabcode_full  test_jabcode_full.c
(+326 files in other folders)
